<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="id"
            app:title="이름 입력"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="#ffffff"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color"
            app:title="색상 선택"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="16.0f"
            app:entries="@array/size_entries"
            app:entryValues="@array/size_values"
            app:key="size"
            app:title="크기 선택"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="normal"
            app:entries="@array/font_style_entries"
            app:entryValues="@array/font_style_values"
            app:key="font"
            app:title="폰트 선택"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>